sample/msvc/error/c2041.cpp
// C2041.cpp
int i = 081;   // C2041  8 is not a base 8 digit
